<resources>
    <string name="app_name">Get Psyched</string>
    <string name="please_enter_a_number_between_1_and_12_full_tolerance_reset_occurs_after_12_days">
        Please enter a number between 1 and 12. Full tolerance reset occurs after 12 days</string>
    <string name="first_run_message">Get Psyched is for users at least 18 years of age. We do not
        condone the use of any legal or illegal substances; this app is meant to be used as an
        educational and harm reduction resource</string>
    <string name="agree">Agree</string>
    <string name="exit">Exit</string>
    <string name="welcome">Welcome</string>
    <string name="incorrect_number">Incorrect Number</string>
    <string name="please_enter_number">Please enter a correct number</string>
    <string name="okay">Okay</string>
    <string name="lsd_banner">Lysergic Acid Diethylamide - LSD-25</string>
    <string name="about">About</string>
    <string name="tolerance_calculator">Tolerance Calculator</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="desired_dose_in_ug">Desired dose in ug</string>
    <string name="days_since_last_dose">Days since last dose</string>
    <string name="last_dose_in_ug">Last dose in ug</string>
    <string name="lsd_tolerance_calculator">LSD Tolerance Calculator</string>
    <string name="get_psyched_launcher_msg">Thank you for choosing Get Psyched! We aim to be your
    go-to source for information and harm reduction tips. The first version of this app only
        contains information about LSD, but will be updated over time to include different mushrooms
        and DMT. Once that is finished we will start adding other tryptamines, phenethylamines and
        various research chemicals.</string>
    <string name="enter">Enter</string>
    <string name="lsd_calculator_result">You will need to take %dug to feel the effects of %dug
        after %d days</string>
    <string name="lsd_calculator_warning">Warning - This is a close estimate. This is not an exact
        science yet as it is near impossible to know what dose you are taking without a laboratory,
        and the science has not been allowed to fully catch up yet.\n\nThanks to u/AdmiralAcid for
        working on and improving the formula.</string>
    <string name="lsd_about_message">Lysergic acid diethylamide, also known as acid, is a hallucinogenic
        drug. Effects typically include altered thoughts, feelings, and awareness of ones
        surroundings. Many users see or hear things that do not exist.  Dilated pupils, increased
        blood pressure, and increased body temperature are typical. Effects typically begin within
        30 minutes and can last up to 12 hours.  It is used mainly as a recreational drug and for
        spiritual reasons. \n\n
    LSD is not physically addictive, but can be mentally addictive for those that are trying to
        escape reality. Adverse psychiatric reactions are possible, such as anxiety, paranoia, and
        delusions. Distressing flashbacks might occur in spite of no further use, a condition called
        hallucinogen persisting perception disorder(HPPD). Death is very rare as a result of LSD,
        though it occasionally occurs in accidents. The effects of LSD are believed to occur as a
        result of alterations in the serotonin system. As little as 20 micrograms can produce an
        effect. In pure form, LSD is clear or white in color, has no smell, and is crystalline.
        It breaks down with exposure to ultraviolet light, oxygen, and chlorine. \n\n
    LSD was first synthesised by Albert Hofmann in 1938 from lysergic acid, a chemical from the
        fungus ergot; he did not discover it\'s effects until April 19th, 1943 - Bicycle Day.</string>
</resources>
